--- a/index.html
+++ b/index.html
@@ -157,6 +157,9 @@
               <div class="attacks-header">
                 <i class="fas fa-bolt"></i>&nbsp;&nbsp;Attacks&nbsp;&&nbsp;Spellcasting
               </div>
+              <ul class="attack-list">
+                <li v-for="attack in spells" class="attack">{{attack.man}}</li>
+              </ul>
             </div>
           </div>
         </div>
@@ -223,7 +226,13 @@
       },
       showPotions: false,
       potRoll: 0,
-      showCombat: false
+      showCombat: false,
+      spells: [
+        { man: 'dude' },
+        { man: 'bro' },
+        { man: 'dude' },
+        { man: 'bro' }
+      ]
     },
     computed: {
 
@@ -351,7 +360,11 @@
       // Top
 
       abilityMod: function (stat) {
-        return calcAbilityMod(stat)
+        if (calcAbilityMod(stat) <= 0) {
+          return calcAbilityMod(stat)
+        } else {
+          return '+' + String(calcAbilityMod(stat))
+        }
       },
       toggleShowPotions: function () {
         this.showPotions = !this.showPotions
@@ -592,13 +605,16 @@
   }
 
   .stat-mod {
-    border-radius: 100%;
-    height: 35px;
-    width: 35px;
-    background-color: #7026ac;
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 100%;
+    height: 35px;
+    width: 35px;
+    /* font-family: 'Times New Roman', Times, serif; */
+    /* font-weight: bold; */
+    font-size: 1.15rem;
+    background-color: #7026ac;
   }
 
   .bar {
@@ -767,6 +783,29 @@
   .attacks-header {
     padding: 0.3rem;
     background-color: #5f5f5f;
+  }
+  
+  .attack-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 0;
+    margin: 0;
+    height: 100%;
+  }
+  
+  .attack {
+    display: flex;
+    flex-grow: 1;
+    align-items: center;
+    padding: 0.5rem 1rem;
+  }
+  
+  .attack:nth-child(even) {
+    background-color: #444444;
+  }
+  .attack:nth-child(odd) {
+    background-color: #525050;
   }
 
 </style>
