--- a/index.html
+++ b/index.html
@@ -237,19 +237,61 @@
       showCombat: false,
       attacks: [
         { 
-          name: 'Scimitar',
+          name: 'Dancing Blade F',
           bonus: '+7',
           damage: '1d6 + 4, 1d6',
           damageType: 'Slashing, Fire',
           type: 'weapon'
         },
         { 
-          name: 'Scimitar',
+          name: 'Dancing Blade N',
           bonus: '+7',
           damage: '1d6 + 4, 1d6',
           damageType: 'Slashing, Necrotic',
           type: 'weapon'
-        }
+        },
+        // { 
+        //   name: 'Dancing Blade F',
+        //   bonus: '+7',
+        //   damage: '1d6 + 4, 1d6',
+        //   damageType: 'Slashing, Fire',
+        //   type: 'weapon'
+        // },
+        // { 
+        //   name: 'Dancing Blade N',
+        //   bonus: '+7',
+        //   damage: '1d6 + 4, 1d6',
+        //   damageType: 'Slashing, Necrotic',
+        //   type: 'weapon'
+        // },
+        // { 
+        //   name: 'Dancing Blade F',
+        //   bonus: '+7',
+        //   damage: '1d6 + 4, 1d6',
+        //   damageType: 'Slashing, Fire',
+        //   type: 'weapon'
+        // },
+        // { 
+        //   name: 'Dancing Blade N',
+        //   bonus: '+7',
+        //   damage: '1d6 + 4, 1d6',
+        //   damageType: 'Slashing, Necrotic',
+        //   type: 'weapon'
+        // },
+        // { 
+        //   name: 'Dancing Blade F',
+        //   bonus: '+7',
+        //   damage: '1d6 + 4, 1d6',
+        //   damageType: 'Slashing, Fire',
+        //   type: 'weapon'
+        // },
+        // { 
+        //   name: 'Dancing Blade N',
+        //   bonus: '+7',
+        //   damage: '1d6 + 4, 1d6',
+        //   damageType: 'Slashing, Necrotic',
+        //   type: 'weapon'
+        // }
       ]
     },
     computed: {
@@ -554,7 +596,6 @@
   }
 
   .dropdown-content {
-    /* border: 1px solid whitesmoke; */
     display: flex;
     margin-top: 5px;
     color: white;
@@ -711,8 +752,6 @@
 
   .eye {
     border: 3px solid #5f5f5f;
-    /* border: 9px double #afafaf; */
-    /* border: 9px double #fad687; */
     width: 70px;
     height: 70px;
     background-color: #444444;
@@ -804,14 +843,29 @@
     padding: 0;
     margin: 0;
     height: 100%;
+    overflow: auto; /* clipping issue */
   }
   
+  .attack-list::-webkit-scrollbar {
+    width: 1em;
+  }
+  
+  .attack-list::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  }
+  
+  .attack-list::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    outline: 1px solid slategrey;
+  }
+
   .attack {
     display: flex;
     flex-grow: 1;
     align-items: center;
     padding: 0.5rem 1rem;
     height: 30px;
+    min-height: 30px;
     font-size: 0.9rem;
   }
   
