fix scrolling issue

--- a/index.html
+++ b/index.html
@@ -250,48 +250,48 @@
           damageType: 'Slashing, Necrotic',
           type: 'weapon'
         },
-        // { 
-        //   name: 'Dancing Blade F',
-        //   bonus: '+7',
-        //   damage: '1d6 + 4, 1d6',
-        //   damageType: 'Slashing, Fire',
-        //   type: 'weapon'
-        // },
-        // { 
-        //   name: 'Dancing Blade N',
-        //   bonus: '+7',
-        //   damage: '1d6 + 4, 1d6',
-        //   damageType: 'Slashing, Necrotic',
-        //   type: 'weapon'
-        // },
-        // { 
-        //   name: 'Dancing Blade F',
-        //   bonus: '+7',
-        //   damage: '1d6 + 4, 1d6',
-        //   damageType: 'Slashing, Fire',
-        //   type: 'weapon'
-        // },
-        // { 
-        //   name: 'Dancing Blade N',
-        //   bonus: '+7',
-        //   damage: '1d6 + 4, 1d6',
-        //   damageType: 'Slashing, Necrotic',
-        //   type: 'weapon'
-        // },
-        // { 
-        //   name: 'Dancing Blade F',
-        //   bonus: '+7',
-        //   damage: '1d6 + 4, 1d6',
-        //   damageType: 'Slashing, Fire',
-        //   type: 'weapon'
-        // },
-        // { 
-        //   name: 'Dancing Blade N',
-        //   bonus: '+7',
-        //   damage: '1d6 + 4, 1d6',
-        //   damageType: 'Slashing, Necrotic',
-        //   type: 'weapon'
-        // }
+        { 
+          name: 'Dancing Blade F',
+          bonus: '+7',
+          damage: '1d6 + 4, 1d6',
+          damageType: 'Slashing, Fire',
+          type: 'weapon'
+        },
+        { 
+          name: 'Dancing Blade N',
+          bonus: '+7',
+          damage: '1d6 + 4, 1d6',
+          damageType: 'Slashing, Necrotic',
+          type: 'weapon'
+        },
+        { 
+          name: 'Dancing Blade F',
+          bonus: '+7',
+          damage: '1d6 + 4, 1d6',
+          damageType: 'Slashing, Fire',
+          type: 'weapon'
+        },
+        { 
+          name: 'Dancing Blade N',
+          bonus: '+7',
+          damage: '1d6 + 4, 1d6',
+          damageType: 'Slashing, Necrotic',
+          type: 'weapon'
+        },
+        { 
+          name: 'Dancing Blade F',
+          bonus: '+7',
+          damage: '1d6 + 4, 1d6',
+          damageType: 'Slashing, Fire',
+          type: 'weapon'
+        },
+        { 
+          name: 'Dancing Blade N',
+          bonus: '+7',
+          damage: '1d6 + 4, 1d6',
+          damageType: 'Slashing, Necrotic',
+          type: 'weapon'
+        }
       ]
     },
     computed: {
@@ -839,11 +839,10 @@
   .attack-list {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
     padding: 0;
     margin: 0;
     height: 100%;
-    overflow: auto; /* clipping issue */
+    overflow: auto;
   }
   
   .attack-list::-webkit-scrollbar {
